# tcp-server-in-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: client.cpp  client_demo.cpp  client_login_echo.cpp  crypto_lcg.h  epoll_server.cpp  frame_parser.cpp  frame_parser.h  main.cpp  protocol.h  server.cpp  wire.h
test/: test_frame_parser.cpp  test_lcg.cpp
